[tool.poetry]
name = "nonebot_plugin_memes"
version = "0.6.1"
description = "Nonebot2 plugin for making memes"
authors = ["meetwq <meetwq@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/noneplugin/nonebot-plugin-memes"
repository = "https://github.com/noneplugin/nonebot-plugin-memes"

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.2.0"
nonebot-plugin-alconna = ">=0.38.0,<1.0.0"
nonebot-plugin-session = "^0.3.0"
nonebot-plugin-userinfo = "^0.2.1"
nonebot-plugin-localstore = "^0.6.0"
httpx = ">=0.20.0,<1.0.0"
pypinyin = ">=0.44.0,<1.0.0"
pyyaml = "^6.0"
pil-utils = "^0.1.8"
meme-generator = ">=0.0.15,<0.1.0"

[tool.poetry.group.dev.dependencies]
nonebot-adapter-onebot = "^2.4.0"

[tool.pyright]
pythonVersion = "3.8"
pythonPlatform = "All"
typeCheckingMode = "basic"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["E402", "C901", "UP037"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
